tests/ui/const-generics/issues/issue-83466.stderr
warning: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-83466.rs:11:14
   |
LL |     fn func<'a, U>(self) -> U {
   |             -- the late bound lifetime parameter is introduced here
...
LL |     S.func::<'a, 10_u32>()
   |              ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42868 <https://github.com/rust-lang/rust/issues/42868>
   = note: `#[warn(late_bound_lifetime_arguments)]` (part of `#[warn(future_incompatible)]`) on by default

error[E0747]: constant provided when a type was expected
  --> $DIR/issue-83466.rs:11:18
   |
LL |     S.func::<'a, 10_u32>()
   |                  ^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0747`.
